--- a/ADMIN/assets/css/teacher-profile-view.css
+++ b/ADMIN/assets/css/teacher-profile-view.css
@@ -1,31 +1,46 @@
-*
-{
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-        font-family: 'Open Sans', sans-serif;
-}
-body{
-    height: 100vh;
-    background-color: #000;
-    background-image: url('/home/arto-marttinen-K2K1Ec_51SA-unsplash.jpg');
+body {
+    
+    padding: 0;
+    margin: 0;
+    font-family: 'Lato', sans-serif;
+    background-image: url("/assets/images/bg-image-small.jpg"); 
+    background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
 }
-li{
-    list-style: none;
+.student-profile .card {
+    border-radius: 20px;
 }
-a{
-    text-decoration: none;
-    color: #fff;
-    font-size: 1rem;
+.student-profile .card .card-header .profile_img {
+    width: 150px;
+    height: 150px;
+    object-fit: cover;
+    margin: 10px auto;
+    border: 10px solid rgb(228, 116, 24);/*#ccc*/
+    border-radius: 50%;
 }
-a:hover{
-    color: orange;
+.student-profile .card h3 {
+    font-size: 20px;
+    font-weight: 700;
+}
+.student-profile .card p {
+    font-size: 16px;
+    color: #000;
+}
+.student-profile .table th,
+.student-profile .table td {
+    font-size: 14px;
+    padding: 5px 10px;
+    color: #000;
+}
+.card-body{
+    backdrop-filter: blur(20px);
+    border-radius: 20px;
 }
 header{
     position:relative;
     padding: 0 2rem;
+    color:#fff;
 
 }
 .navbar{
@@ -36,20 +51,26 @@ header{
     display:flex;
     align-items: center;
     justify-content: space-between;
+    color: #fff;
 }
 .navbar .logo a{
     font-size: 1.5rem;
     font-weight: bold;
+    color: #fff;
 }
 .navbar .links{
     display:flex; 
     gap: 2rem;
+    text-decoration-color: #fff;
+    color: #fff;
+   
 }
 .navbar .toggle_btn{
     color: #fff;
-    font-size: 1.5rem;
+    font-size: 1.8rem;
     cursor: pointer;
     display: none;
+    background: #fff;
 }
 .action_btn{
     background-color: rgb(255, 157, 0);
@@ -85,7 +106,7 @@ header{
     transition: height .2s cubic-bezier(0.175,0.885,0.32,1.275);
 }
 .dropdown_menu.open{
-    height: 240px;
+    height: 250px;
 }
 .dropdown_menu li{
     padding: 0.7rem;
