--- a/assets/css/forgot-password.css
+++ b/assets/css/forgot-password.css
@@ -10,8 +10,11 @@ body{
    border-radius: 20px; 
 }
 .btn, .btn-lg, .btn-primary, .btn-block{
-    background: orange;
+    background: rgb(255, 140, 0);
     border-radius: 10px;
-    border: orange;
-    box-shadow: 0 0 2px black;
+    border: rgb(255, 140, 0);
+    box-shadow: 0 0 5px black;
+}
+.btn:hover{
+    background: rgb(255, 85, 0);
 }
